--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,33 @@
-.App {
-  text-align: center;
+body {
+  background-image: url('test.jpeg');
+  background-repeat: no-repeat; 
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body::after {
+  /* background-image: url('test.jpeg'); */
+  opacity: 0.5;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+.logo img {
+  float: left;
+  width: 70px; 
+  padding: 30px;
+}
+
+.logout button {
+  float: right;
+  width: 70px;
+  padding: 30px;
+}
+
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
+} */
+/* 
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -35,4 +50,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
